css/styles.css
:root {
  --accent: #bca480;
  --black: #000;
  --fs-lg: 28px;
  --fs-md: 20px;
  --fs-sm: 16px;
  --fs-xl: 48px;
  --fs-xxl: 124px;
  --fs-xs: 14px;
  --hm: #e325ca;
  --horizontal-padding: 24px;
  --primary: #fbfbfb;
  --secondary: #1a1a1a;
  --white: #fff;
}

@font-face {
  font-family: "Neue Haas";
  src: url("../assets/font/NeueHaas/NeueHaasDisplay-Roman.woff2");
}

* {
  font-family: "Neue Haas", sans-serif;
  letter-spacing: 0px;
  line-height: 94%;
  margin: 0;
  padding: 0;
  text-decoration: none;
}

a {
  cursor: pointer;
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: normal;
}

nav {
  align-items: center;
  display: flex;
  font: var(--fs-md) sans-serif;
  height: 6vh;
  justify-content: space-between;
  position: sticky;
  top: 0;
  z-index: 99;
}

nav img {
  height: 24px;
}

nav .nav-separator {
  padding: 0 calc(var(--horizontal-padding) / 2);
}

#contacts {
  background-color: var(--secondary);
}

#contacts h2 {
  padding: 2em 0 0 0;
  text-align: center;
}

#fold {
  display: flex;
  flex-flow: column nowrap;
  height: 94vh;
  justify-content: space-between;
}

#fold-bottom {
  align-items: end;
  display: flex;
  justify-content: space-between;
  padding: var(--horizontal-padding) 0;
}

#fold-about {
  max-width: 1200px;
}

#hello {
  font-size: var(--fs-xxl);
  padding: 1rem 0 0 0;
}

#hireCtaMail {
  color: var(--hm);
  cursor: cell;
}

#hireCtaMail .hover-underline-animation::after {
  background-color: var(--hm) !important;
}

#ied {
  margin: var(--horizontal-padding) 0 0 0;
}

#jm {
  display: none;
}

#jackmarelli {
  display: inlin;
}

#my-pic img {
  height: 10vh;
  margin: 0 0 0 var(--horizontal-padding);
  min-height: 220px;
  min-width: 220px;
  object-fit: cover;
  object-position: top;
  width: 10vh;
}

#navBrand {
  align-items: center;
  display: flex;
}

#overlayMenu {
  align-items: center;
  display: none;
  height: 100vh;
  justify-content: start;
  left: 0;
  padding: var(--horizontal-padding);
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 111;
}

#overlayMenu .links .menu-link {
  align-items: center;
  display: flex;
  font-size: var(--fs-xl);
  justify-content: center;
  margin: var(--horizontal-padding) 0;
}

#overlayMenu .links .menu-link::before {
  background-color: var(--secondary);
  content: "";
  height: 2px;
  transform: scaleX(0);
  transform-origin: center start;
  transition: transform 0.5s ease-in-out;
  width: 100px;
}

#overlayMenu .links .menu-link:hover::before {
  transform: scaleX(1);
}

#skills {
  margin-bottom: calc(var(--horizontal-padding) * 3);
}

#works {
  margin: 3em 0 3em 0;
}

.all-works-container {
  display: flex;
  flex-flow: column wrap;
  width: 100%;
  justify-content: start;
  align-items: flex-start;
  align-content: space-between;
  height: 30vw;
}

.big {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 5em auto;
  width: 100%;
}

.big .big-contact {
  font-size: 7vw;
  position: relative;
}

.block-contain {
  padding-block: var(--horizontal-padding);
}

.d-none {
  display: none;
}

.fs-xs {
  font-size: var(--fs-xs);
}

.fs-sm {
  font-size: var(--fs-sm);
}

.fs-md {
  font-size: var(--fs-md);
}

.fs-lg {
  font-size: var(--fs-lg);
}

.fs-xl {
  font-size: var(--fs-xl);
}

.fs-xxl {
  font-size: var(--fs-xxl);
}

.full-width-hr {
  margin: 0 var(--horizontal-padding);
  height: 2px;
  background-color: var(--secondary);
}

.hover-underline-animation {
  display: inline-block;
  position: relative;
}

.hover-underline-animation::after {
  background-color: inherit;
  bottom: -2px;
  content: "";
  height: 2px;
  left: 0;
  position: absolute;
  transform: scaleX(0);
  transform-origin: bottom right;
  transition: transform 0.5s ease-in-out;
  width: 100%;
}

.hover-underline-animation:hover::after {
  background-color: inherit;
  transform: scaleX(1);
  transform-origin: bottom left;
}

.inline-contain {
  padding-inline: var(--horizontal-padding);
}

.link-dark {
  background-color: var(--primary);
  color: var(--secondary);
  text-decoration: none;
}

.link-decor {
  animation: linkdecormove 3s ease-in-out infinite;
  background-image: url("../assets/images/elements/ellipse.svg");
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  width: 100%;
  z-index: -1;
}

.social-list {
  list-style: none;
  padding: 0;
}

.social {
  margin: 0 0 calc(var(--horizontal-padding) / 4) 0;
}

.social:hover {
  opacity: 0.7;
}

.theme-light {
  background-color: var(--primary);
  color: var(--secondary);
}

.theme-dark {
  background-color: var(--secondary);
  color: var(--primary);
}

.theme-dark a {
  color: var(--primary);
}

.theme-light .hover-underline-animation::after {
  background-color: var(--secondary);
}

.theme-dark .hover-underline-animation::after {
  background-color: var(--primary);
}

.tool {
  margin-inline: var(--horizontal-padding);
}

.tool > :not(div:nth-child(1)) {
  padding-block: calc(var(--horizontal-padding) / 3);
  border-top: 2px solid var(--secondary);
}

.tool .title {
  padding-top: calc(var(--horizontal-padding) / 2);
  border-top: 2px solid var(--secondary);
  font-size: var(--fs-lg);
}

.w {
  align-items: start;
  border-radius: 20px;
  cursor: pointer;
  display: flex;
  flex-flow: column;
  height: 25vw;
  justify-content: end;
  margin-bottom: var(--horizontal-padding);
  overflow: hidden;
  position: relative;
  width: calc(50% - calc(var(--horizontal-padding) / 2));
}

.w:hover {
  border: 2px solid var(--secondary);
}

.w:hover > img {
  opacity: 0;
}

.w img {
  -webkit-user-drag: none;
  height: 100%;
  left: 0;
  object-fit: cover;
  position: absolute;
  scale: 1.01;
  top: 0;
  width: 100%;
}

.w .title {
  font-size: var(--fs-lg);
  margin: 0 0 calc(var(--horizontal-padding) / 1.5) 0;
}

.w .title,
.w .exp {
  color: var(--secondary);
}

.w .exp {
  font-size: var(--fs-md);
}

.w:nth-child(odd) {
  margin-right: calc(var(--horizontal-padding) / 2);
}

.w:nth-child(even) {
  margin-left: calc(var(--horizontal-padding) / 2);
}

.work {
  width: calc(33.33333333% - var(--horizontal-padding) * 2 / 3);
  margin-bottom: var(--horizontal-padding);
  border-radius: 16px;
  height: fit-content;
  overflow: hidden;
}

.work img {
  width: 100%;
  height: 100%;
}

.your-project {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--secondary);
}

.your-project div {
  color: var(--secondary);
}

.your-project img {
  position: unset;
  width: 100px;
  height: 100px;
  object-fit: cover;
  transition: all 900ms ease-in-out;
  transform: rotate(0deg);
  font-size: var(--fs-xl);
  white-space: nowrap;
  margin: 0 0 var(--horizontal-padding) 0;
}

.your-project:hover > img {
  transform: rotate(270deg);
  opacity: 1;
  transition: all 900ms ease-in-out;
}

@media (max-width: 768px) {
  :root {
    --fs-lg: calc(29px - 1vw);
    --fs-md: 18px;
    --fs-sm: 14px;
    --fs-xl: 31px;
    --fs-xs: 12px;
    --fs-xxl: 54px;
    --horizontal-padding: 16px;
  }

  nav {
    font: var(--fs-md) sans-serif;
  }

  nav img {
    height: 20px;
  }

  #contacts h2 {
    font-size: var(--fs-sm);
  }

  #fold {
    height: fit-content;
    justify-content: start;
  }

  #fold-about {
    margin-top: calc(var(--horizontal-padding) * 2.4);
  }

  #fold-bottom {
    flex-flow: column-reverse nowrap;
  }

  #hello {
    padding: 0;
  }

  #jackmarelli {
    display: none;
  }

  #jm {
    display: inline;
  }

  #my-pic {
    max-width: 100%;
    min-width: 100%;
    object-fit: cover;
    width: 100%;
  }

  #my-pic img {
    height: 50vw;
    margin: 0 0 var(--horizontal-padding) 0;
    width: 100%;
  }

  .all-works-container {
    height: fit-content;
  }

  .big {
    border: 2px solid var(--white);
    border-radius: 8px;
    margin: 1em 0;
    padding: 1em 0;
  }

  .tool {
    margin-inline: var(--horizontal-padding);
  }

  .tool > :not(div:nth-child(1)) {
    padding-block: calc(var(--horizontal-padding) / 3);
    border-top: none;
  }

  .tool > div:nth-child(n + 3) {
    padding-block: calc(var(--horizontal-padding) / 3);
    border-top: 1px solid var(--secondary);
  }

  .tool-list .tool:last-child {
    padding-bottom: var(--horizontal-padding);
  }

  .tool .title {
    padding-block: calc(var(--horizontal-padding) / 2);
    border-top: 1px solid var(--secondary);
  }

  .w {
    border-radius: 16px;
    height: 60vw;
    margin: 0 0 var(--horizontal-padding) 0;
    width: 100%;
  }

  .w:nth-child(odd) {
    margin-right: 0;
  }

  .w:nth-child(even) {
    margin-left: 0;
  }

  .work {
    width: 100%;
  }

  .your-project {
    border: 1px solid var(--secondary);
  }

  .your-project img {
    width: 20vw;
    height: 20vw;
  }
}

